--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cross-env": "^7.0.3",
     "crypto-js": "^4.0.0",
     "date-fns": "^2.21.3",
+    "dotenv": "^10.0.0",
     "fastify-swagger": "^4.7.0",
     "ioredis": "^4.27.6",
     "lodash": "^4.17.21",
