--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,7 @@ services:
     container_name: nest-admin-mysql
     restart: always
     ports:
-      - 3306:3306
-    # 主要就是把服务的端口映射出来给其他服务使用的。
-    expose:
-      - 3306
+      - 33066:3306
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci #设置utf8字符集
     volumes:
       - ./docs/sample/mysql/:/var/lib/mysql/ # ./docs/sample/mysql/路径可以替换成自己的路径
@@ -28,9 +25,6 @@ services:
     restart: always
     ports:
       - 6379:6379
-    # 主要就是把服务的端口映射出来给其他服务使用的。
-    expose:
-      - 6379
     command: redis-server
     environment:
       TZ: Asia/Shanghai
@@ -40,6 +34,8 @@ services:
   nest-admin-server:
     # build: 从当前路径构建镜像
     build: .
+    image: nest-admin-server
+    container_name: nest-admin-server
     restart: always
     environment:
       TZ: Asia/Shanghai
