chore: upgrade deps & breaking change

--- a/.env
+++ b/.env
@@ -1,7 +1,16 @@
-PORT=7001
-WS_PORT=7002
-WS_PATH=/ws-api
-# PREFIX=/api/v1
+# common configure
+TZ=Asia/Shanghai
 
-DOCS_PREFIX= swagger-api
+# 根据自己实际情况配置
+MAILER_HOST=xxx
+MAILER_PORT=xxx
+MAILER_USER=xxx
+MAILER_PASS=xxx
+AMAP_KEY=xxx
+QINIU_ACCESSKEY=xxx
+QINIU_SECRETKEY=xxx
+QINIU_DOMAIN=xxx
+QINIU_BUCKET=xxx
+QINIU_ZONE=xxx # Zone_as0 | Zone_na0 | Zone_z0 | Zone_z1 | Zone_z2
+QINIU_ACCESS_TYPE=public # or private
 
