--- a/package.json
+++ b/package.json
@@ -25,65 +25,64 @@
     "cleanlog": "rimraf logs"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.0.2",
-    "@nestjs/bull": "^0.4.1",
-    "@nestjs/common": "^8.0.5",
-    "@nestjs/config": "^1.1.5",
-    "@nestjs/core": "^8.0.5",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/platform-fastify": "^8.0.5",
-    "@nestjs/platform-socket.io": "^8.0.5",
-    "@nestjs/swagger": "^5.1.3",
-    "@nestjs/typeorm": "^8.0.2",
-    "@nestjs/websockets": "^8.0.5",
-    "bull": "^3.22.5",
-    "cache-manager": "^3.4.3",
-    "class-transformer": "0.4.0",
-    "class-validator": "^0.13.1",
-    "cross-env": "^7.0.3",
-    "crypto-js": "^4.0.0",
-    "date-fns": "^2.21.3",
-    "dotenv": "^10.0.0",
-    "fastify-swagger": "^4.7.0",
-    "ioredis": "^4.27.6",
+    "@fastify/swagger": "^7.4.1",
+    "@nestjs/axios": "^0.1.0",
+    "@nestjs/bull": "^0.6.0",
+    "@nestjs/common": "^9.0.6",
+    "@nestjs/config": "^2.2.0",
+    "@nestjs/core": "^9.0.7",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.0.7",
+    "@nestjs/platform-socket.io": "^9.0.7",
+    "@nestjs/swagger": "^6.0.4",
+    "@nestjs/typeorm": "^9.0.0",
+    "@nestjs/websockets": "^9.0.7",
+    "bull": "^4.8.5",
+    "cache-manager": "^4.1.0",
+    "class-transformer": "0.5.1",
+    "class-validator": "^0.13.2",
+    "crypto-js": "^4.1.1",
+    "date-fns": "^2.29.1",
+    "ioredis": "^5.2.2",
     "lodash": "^4.17.21",
-    "mysql2": "^2.2.5",
-    "nanoid": "^3.1.22",
-    "qiniu": "^7.3.2",
+    "mysql2": "^2.3.3",
+    "nanoid": "^3.3.4",
+    "qiniu": "^7.7.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.5.6",
     "svg-captcha": "^1.4.0",
-    "systeminformation": "^5.9.4",
-    "typeorm": "^0.2.32",
-    "ua-parser-js": "^0.7.28",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5"
+    "systeminformation": "^5.12.1",
+    "typeorm": "^0.3.7",
+    "ua-parser-js": "^1.0.2",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.1.1",
-    "@nestjs/schematics": "^8.0.2",
-    "@nestjs/testing": "^8.0.5",
-    "@types/bull": "^3.15.1",
-    "@types/cache-manager": "^3.4.0",
-    "@types/jest": "^26.0.22",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.36",
-    "@types/supertest": "^2.0.10",
-    "@types/ua-parser-js": "^0.7.35",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.1",
+    "@nestjs/testing": "^9.0.7",
+    "@types/bull": "^3.15.9",
+    "@types/cache-manager": "^4.0.1",
+    "@types/jest": "^28.1.6",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.6.3",
+    "@types/supertest": "^2.0.12",
+    "@types/ua-parser-js": "^0.7.36",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "supertest": "^6.1.3",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -101,5 +100,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
