chore: update README

--- a/package.json
+++ b/package.json
@@ -22,28 +22,29 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "cleanlog": "rimraf logs"
+    "cleanlog": "rimraf logs",
+    "rmi:nest-admin-server": "docker-compose --env-file .env.production stop nest-admin-server && docker container rm nest-admin-server && docker rmi nest-admin-server"
   },
   "dependencies": {
     "@fastify/swagger": "^7.4.1",
     "@nestjs/axios": "^0.1.0",
-    "@nestjs/bull": "^0.6.0",
-    "@nestjs/common": "^9.0.6",
+    "@nestjs/bull": "^0.6.1",
+    "@nestjs/common": "^9.0.11",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.7",
+    "@nestjs/core": "^9.0.11",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/platform-fastify": "^9.0.7",
-    "@nestjs/platform-socket.io": "^9.0.7",
-    "@nestjs/swagger": "^6.0.4",
-    "@nestjs/typeorm": "^9.0.0",
-    "@nestjs/websockets": "^9.0.7",
+    "@nestjs/platform-fastify": "^9.0.11",
+    "@nestjs/platform-socket.io": "^9.0.11",
+    "@nestjs/swagger": "^6.0.5",
+    "@nestjs/typeorm": "^9.0.1",
+    "@nestjs/websockets": "^9.0.11",
     "bull": "^4.8.5",
     "cache-manager": "^4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
     "crypto-js": "^4.1.1",
-    "date-fns": "^2.29.1",
-    "ioredis": "^5.2.2",
+    "date-fns": "^2.29.2",
+    "ioredis": "^5.2.3",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "nanoid": "^3.3.4",
@@ -51,7 +52,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.6",
     "svg-captcha": "^1.4.0",
-    "systeminformation": "^5.12.1",
+    "systeminformation": "^5.12.6",
     "typeorm": "^0.3.7",
     "ua-parser-js": "^1.0.2",
     "winston": "^3.8.1",
@@ -60,28 +61,28 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.1",
-    "@nestjs/testing": "^9.0.7",
+    "@nestjs/testing": "^9.0.11",
     "@types/bull": "^3.15.9",
     "@types/cache-manager": "^4.0.1",
-    "@types/jest": "^28.1.6",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.6.3",
+    "@types/jest": "^28.1.8",
+    "@types/lodash": "^4.14.184",
+    "@types/node": "^18.7.13",
     "@types/supertest": "^2.0.12",
     "@types/ua-parser-js": "^0.7.36",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.20.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.7",
+    "ts-jest": "^28.0.8",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.7.4"
   },
   "jest": {
