feat(modules): [user,role] support fuzzy query

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,14 @@
     "lib": [
       "ESNext"
     ],
-  }
+    "paths": { /*定义别名*/
+      "@/*": [
+        "src/*"
+      ]
+    },
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
