--- a/.env
+++ b/.env
@@ -11,6 +11,13 @@ QINIU_ACCESSKEY=xxx
 QINIU_SECRETKEY=xxx
 QINIU_DOMAIN=xxx
 QINIU_BUCKET=xxx
-QINIU_ZONE=xxx # Zone_as0 | Zone_na0 | Zone_z0 | Zone_z1 | Zone_z2
+QINIU_ZONE=Zone_z2 # Zone_as0 | Zone_na0 | Zone_z0 | Zone_z1 | Zone_z2
 QINIU_ACCESS_TYPE=public # or private
 
+# swagger
+SWAGGER_PATH=swagger-api
+SWAGGER_ENABLE=true
+SWAGGER_VERSION=1.0
+SWAGGER_TITLE=nest-admin后台管理系统API文档
+SWAGGER_DESC=NestJs CRUD for RESTful API使用 nestjs + mysql + typeorm + redis + jwt + swagger 企业中后台管理系统项目RBAC权限管理(细粒度到按钮)、实现单点登录等。
+   
