--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "cleanlog": "rimraf logs",
-    "rmi:nest-admin-server": "docker-compose --env-file .env.production stop nest-admin-server && docker container rm nest-admin-server && docker rmi nest-admin-server"
+    "docker:rmi": "docker-compose --env-file .env.production stop nest-admin-server && docker container rm nest-admin-server && docker rmi nest-admin-server",
+    "docker:dev": "docker-compose --env-file .env.development up --build -d",
+    "docker:prod": "docker-compose --env-file .env.production up --build -d",
+    "docker:down": "docker-compose --env-file .env.production down ",
+    "docker:logs": "docker-compose logs -f"
   },
   "dependencies": {
-    "@fastify/swagger": "^7.4.1",
+    "@fastify/swagger": "^7.5.1",
     "@nestjs/axios": "^0.1.0",
     "@nestjs/bull": "^0.6.1",
     "@nestjs/common": "^9.0.11",
@@ -35,15 +39,15 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.11",
     "@nestjs/platform-socket.io": "^9.0.11",
-    "@nestjs/swagger": "^6.0.5",
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.0.11",
-    "bull": "^4.8.5",
+    "bull": "^4.9.0",
     "cache-manager": "^4.1.0",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
     "crypto-js": "^4.1.1",
-    "date-fns": "^2.29.2",
+    "date-fns": "^2.29.3",
     "ioredis": "^5.2.3",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
@@ -53,37 +57,37 @@
     "rxjs": "^7.5.6",
     "svg-captcha": "^1.4.0",
     "systeminformation": "^5.12.6",
-    "typeorm": "^0.3.7",
+    "typeorm": "^0.3.9",
     "ua-parser-js": "^1.0.2",
-    "winston": "^3.8.1",
+    "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.1",
+    "@nestjs/cli": "^9.1.3",
+    "@nestjs/schematics": "^9.0.3",
     "@nestjs/testing": "^9.0.11",
     "@types/bull": "^3.15.9",
-    "@types/cache-manager": "^4.0.1",
-    "@types/jest": "^28.1.8",
-    "@types/lodash": "^4.14.184",
-    "@types/node": "^18.7.13",
+    "@types/cache-manager": "^4.0.2",
+    "@types/jest": "^29.0.3",
+    "@types/lodash": "^4.14.185",
+    "@types/node": "^18.7.18",
     "@types/supertest": "^2.0.12",
     "@types/ua-parser-js": "^0.7.36",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.22.0",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^28.1.3",
+    "jest": "^29.0.3",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
     "supertest": "^6.2.4",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^29.0.1",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
