--- a/.env.development
+++ b/.env.development
@@ -5,8 +5,8 @@ WS_PATH=/ws-api
 # PREFIX=/api/v1
 
 # database configure
-DATABASE_HOST=127.0.0.1
-MYSQL_PORT=3306
+MYSQL_HOST=127.0.0.1
+MYSQL_PORT=13307
 MYSQL_DATABASE=nest-admin
 MYSQL_USERNAME=root
 MYSQL_PASSWORD=root
