chore: remove redundant config file

--- a/.env.production
+++ b/.env.production
@@ -17,3 +17,11 @@ REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_PASSWORD=123456
 REDIS_DB=0
+
+
+QINIU_ACCESSKEY=GNDEFCaNVPZ8w5GAIyESdv-_-cqc8fgH1Bniiuai
+QINIU_SECRETKEY=LH1854zZdEJKcp3hCmf_NU1_-f9nYWk3krl2BCTl
+QINIU_DOMAIN=https://cdn.buqiyuan.site
+QINIU_BUCKET=nest-admin
+QINIU_ZONE=Zone_z2 # Zone_as0 | Zone_na0 | Zone_z0 | Zone_z1 | Zone_z2
+QINIU_ACCESS_TYPE=public # or private
