refactor: code style

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,9 @@
 * text=auto eol=lf
+*.ts linguist-detectable=false
+*.css linguist-detectable=false
+*.scss linguist-detectable=false
+*.js linguist-detectable=true
+*.vue linguist-detectable=true
+
+# /src/config/config.production.ts merge=ours
+# docker-compose.yaml merge=ours
