--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=development nest start",
     "dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
@@ -16,6 +14,11 @@
     "pm2:prod": "pm2 start ecosystem.config.js --env production",
     "pm2:dev": "pm2 start ecosystem.config.js --env development",
     "pm2:test": "pm2 start ecosystem.config.js --env test",
+    "migration:create": "npx typeorm-ts-node-commonjs migration:create ./src/migrations/create-table",
+    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate ./src/migrations/update-table -d ./src/config/data-source.ts",
+    "migration:run": "npm run build && npx typeorm-ts-node-commonjs migration:run -d ./src/config/data-source.ts",
+    "migration:revert": "npm run typeorm migration:revert",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -26,8 +29,11 @@
     "docker:rmi": "docker compose --env-file .env.production stop nest-admin-server && docker container rm nest-admin-server && docker rmi nest-admin-server",
     "docker:dev": "docker compose --env-file .env.development up --build -d",
     "docker:prod": "docker compose --env-file .env.production up --build -d",
+    "docker:up": "docker compose --env-file .env.production up -d",
     "docker:down": "docker compose --env-file .env.production down ",
-    "docker:logs": "docker compose logs -f"
+    "docker:logs": "docker compose logs -f",
+    "prebuild": "rimraf dist",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@fastify/swagger": "^7.6.1",
@@ -43,7 +49,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.1.2",
     "bull": "^4.10.0",
-    "cache-manager": "^4.1.0",
+    "cache-manager": "^5.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
     "crypto-js": "^4.1.1",
@@ -78,10 +84,12 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
     "jest": "^29.1.2",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
     "supertest": "^6.2.4",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
