--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ WS_PATH=/ws-api
 # PREFIX=/api/v1
 
 # database configure
-MYSQL_HOST=mysql
+MYSQL_HOST=127.0.0.1
 MYSQL_PORT=13307
 MYSQL_DATABASE=nest-admin
 MYSQL_USERNAME=root
@@ -13,11 +13,10 @@ MYSQL_PASSWORD=root
 MYSQL_ROOT_PASSWORD=root
 
 # redis configure
-REDIS_HOST=redis
+REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=123456
 REDIS_DB=0
-
 
 QINIU_ACCESSKEY=GNDEFCaNVPZ8w5GAIyESdv-_-cqc8fgH1Bniiuai
 QINIU_SECRETKEY=LH1854zZdEJKcp3hCmf_NU1_-f9nYWk3krl2BCTl
