--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
   nest-admin-server:
     # build: 从当前路径构建镜像
     build: .
-    image: nest-admin-server
+    image: buqiyuan/nest-admin-server:latest
     container_name: nest-admin-server
     restart: always
     env_file:
