--- a/.env.production
+++ b/.env.production
@@ -5,7 +5,7 @@ WS_PATH=/ws-api
 # PREFIX=/api/v1
 
 # database configure
-MYSQL_HOST=mysql
+MYSQL_HOST=host.docker.internal
 MYSQL_PORT=13307
 MYSQL_DATABASE=nest-admin
 MYSQL_USERNAME=root
@@ -13,7 +13,8 @@ MYSQL_PASSWORD=root
 MYSQL_ROOT_PASSWORD=root
 
 # redis configure
-REDIS_HOST=redis
+REDIS_HOST=host.docker.internal
 REDIS_PORT=6379
 REDIS_PASSWORD=123456
 REDIS_DB=0
+
