--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ lerna-debug.log*
 # src/config/config.development.*
 # src/config/config.production.*
 docs/sample/mysql/
+
+# environment
+.env
+.env.production
