--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "pm2:dev": "pm2 start ecosystem.config.js --env development",
     "pm2:test": "pm2 start ecosystem.config.js --env test",
     "migration:create": "npx typeorm-ts-node-commonjs migration:create ./src/migrations/create-table",
-    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate ./src/migrations/update-table -d ./src/config/data-source.ts",
-    "migration:run": "npm run build && npx typeorm-ts-node-commonjs migration:run -d ./src/config/data-source.ts",
-    "migration:revert": "npm run typeorm migration:revert",
+    "migration:generate": "node ./scripts/migration-generate.js",
+    "migration:run": "npm run build&&npx typeorm-ts-node-commonjs migration:run -d ./src/config/data-source.ts",
+    "migration:revert": "npx typeorm-ts-node-commonjs migration:revert -d ./src/config/data-source.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -27,75 +27,76 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "cleanlog": "rimraf logs",
     "docker:rmi": "docker compose --env-file .env.production stop nest-admin-server && docker container rm nest-admin-server && docker rmi nest-admin-server",
-    "docker:dev": "docker compose --env-file .env.development up --build -d",
-    "docker:prod": "docker compose --env-file .env.production up --build -d",
-    "docker:up": "docker compose --env-file .env.production up -d",
-    "docker:down": "docker compose --env-file .env.production down ",
-    "docker:logs": "docker compose logs -f",
+    "docker:build:dev": "docker compose --env-file .env.development up --build",
+    "docker:build": "docker compose --env-file .env.production up --build",
+    "docker:up": "docker compose --env-file .env.production up -d --no-build",
+    "docker:down": "docker compose --env-file .env.production down",
+    "docker:logs": "docker compose --env-file .env.production logs -f",
     "prebuild": "rimraf dist",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@fastify/swagger": "^7.6.1",
-    "@nestjs/axios": "^0.1.0",
-    "@nestjs/bull": "^0.6.1",
-    "@nestjs/common": "^9.1.2",
+    "@fastify/static": "^6.5.1",
+    "@fastify/swagger": "^8.2.0",
+    "@nestjs/axios": "^1.0.0",
+    "@nestjs/bull": "^0.6.2",
+    "@nestjs/common": "^9.2.0",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.1.2",
+    "@nestjs/core": "^9.2.0",
     "@nestjs/jwt": "^9.0.0",
-    "@nestjs/platform-fastify": "^9.1.2",
-    "@nestjs/platform-socket.io": "^9.1.2",
-    "@nestjs/swagger": "^6.1.2",
+    "@nestjs/platform-fastify": "^9.2.0",
+    "@nestjs/platform-socket.io": "^9.2.0",
+    "@nestjs/swagger": "^6.1.3",
     "@nestjs/typeorm": "^9.0.1",
-    "@nestjs/websockets": "^9.1.2",
-    "bull": "^4.10.0",
-    "cache-manager": "^5.0.0",
+    "@nestjs/websockets": "^9.2.0",
+    "bull": "^4.10.2",
+    "cache-manager": "^5.1.3",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
-    "ioredis": "^5.2.3",
+    "ioredis": "^5.2.4",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "nanoid": "^3.3.4",
-    "qiniu": "^7.7.0",
+    "qiniu": "^7.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.7",
     "svg-captcha": "^1.4.0",
-    "systeminformation": "^5.12.6",
+    "systeminformation": "^5.14.4",
     "typeorm": "^0.3.10",
-    "ua-parser-js": "^1.0.2",
+    "ua-parser-js": "^1.0.32",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.1.4",
+    "@nestjs/cli": "^9.1.5",
     "@nestjs/schematics": "^9.0.3",
-    "@nestjs/testing": "^9.1.2",
-    "@types/bull": "^3.15.9",
+    "@nestjs/testing": "^9.2.0",
+    "@types/bull": "^4.10.0",
     "@types/cache-manager": "^4.0.2",
-    "@types/jest": "^29.1.1",
-    "@types/lodash": "^4.14.186",
-    "@types/node": "^18.8.1",
+    "@types/jest": "^29.2.3",
+    "@types/lodash": "^4.14.190",
+    "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
     "@types/ua-parser-js": "^0.7.36",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.24.0",
+    "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
-    "jest": "^29.1.2",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "supertest": "^6.3.0",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "lint-staged": "^13.0.4",
+    "prettier": "^2.8.0",
+    "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "jest": {
     "moduleFileExtensions": [
