--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
     "cache-manager": "^5.1.3",
     "class-transformer": "0.5.1",
     "class-validator": "^0.13.2",
+    "cron-parser": "^4.9.0",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.9.2",
     "ioredis": "^5.2.4",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
@@ -62,6 +65,7 @@
     "qiniu": "^7.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.5.7",
+    "socket.io": "^4.5.3",
     "svg-captcha": "^1.4.0",
     "systeminformation": "^5.14.4",
     "typeorm": "^0.3.10",
