--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,11 @@
-* text=auto eol=lf
-*.ts linguist-detectable=false
-*.css linguist-detectable=false
-*.scss linguist-detectable=false
-*.js linguist-detectable=true
-*.vue linguist-detectable=true
+# https://docs.github.com/cn/get-started/getting-started-with-git/configuring-git-to-handle-line-endings
 
-# /src/config/config.production.ts merge=ours
-# docker-compose.yaml merge=ours
+# Automatically normalize line endings (to LF) for all text-based files.
+* text=auto eol=lf
+
+# Declare files that will always have CRLF line endings on checkout.
+*.{cmd,[cC][mM][dD]} text eol=crlf
+*.{bat,[bB][aA][tT]} text eol=crlf
+
+# Denote all files that are truly binary and should not be modified.
+*.{ico,png,jpg,jpeg,gif,webp,svg,woff,woff2} binary
