feat: add demo mode

--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ LOGGER_LEVEL = debug
 
 # security
 JWT_SECRET = admin!@#123
-JWT_EXPIRE = 86400
+JWT_EXPIRE = 86400 # 单位秒
 REFRESH_TOKEN_SECRET = admin!@#123
 REFRESH_TOKEN_EXPIRE = 2592000
 
@@ -32,3 +32,4 @@ SMTP_HOST = smtp.163.com
 SMTP_PORT = 465
 SMTP_USER = nest_admin@163.com
 SMTP_PASS = VIPLLOIPMETTROYU
+ 
