--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "migration:run": "typeorm -- migration:run",
     "migration:revert": "typeorm -- migration:revert",
     "cleanlog": "rimraf logs",
-    "docker:rmi": "docker compose --env-file .env.production stop nest-admin-server && docker container rm nest-admin-server && docker rmi nest-admin-server",
     "docker:build:dev": "docker compose --env-file .env --env-file .env.development up --build",
     "docker:build": "docker compose --env-file .env --env-file .env.production up --build",
     "docker:up": "docker compose --env-file .env --env-file .env.production up -d --no-build",
     "docker:down": "docker compose --env-file .env --env-file .env.production down",
+    "docker:rmi": "docker compose --env-file .env --env-file .env.production stop nest-admin-server && docker container rm nest-admin-server && docker rmi nest-admin-server",
     "docker:logs": "docker compose --env-file .env --env-file .env.production logs -f"
   },
   "dependencies": {
