chore(deps): overrides @liaoliaots/nestjs-redis => @songkeys/nestjs-redis

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,6 @@
 shamefully-hoist=true
 strict-peer-dependencies=false
+
+# 使用淘宝镜像源
+registry = https://registry.npmmirror.com
+# registry = https://registry.npmjs.org
