--- a/package.json
+++ b/package.json
@@ -42,26 +42,26 @@
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
     "@fastify/multipart": "^8.1.0",
-    "@fastify/static": "^6.12.0",
+    "@fastify/static": "^7.0.0",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs-modules/mailer": "^1.10.3",
-    "@nestjs/axios": "^3.0.1",
-    "@nestjs/bull": "^10.0.1",
-    "@nestjs/cache-manager": "^2.2.0",
-    "@nestjs/common": "^10.3.1",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.3.1",
-    "@nestjs/event-emitter": "^2.0.3",
+    "@nestjs/axios": "^3.0.2",
+    "@nestjs/bull": "^10.1.0",
+    "@nestjs/cache-manager": "^2.2.1",
+    "@nestjs/common": "^10.3.2",
+    "@nestjs/config": "^3.2.0",
+    "@nestjs/core": "^10.3.2",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-fastify": "^10.3.1",
-    "@nestjs/platform-socket.io": "^10.3.1",
-    "@nestjs/schedule": "^4.0.0",
-    "@nestjs/swagger": "^7.2.0",
+    "@nestjs/platform-fastify": "^10.3.2",
+    "@nestjs/platform-socket.io": "^10.3.2",
+    "@nestjs/schedule": "^4.0.1",
+    "@nestjs/swagger": "^7.3.0",
     "@nestjs/terminus": "^10.2.1",
     "@nestjs/throttler": "^5.1.1",
-    "@nestjs/typeorm": "^10.0.1",
-    "@nestjs/websockets": "^10.3.1",
+    "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.2",
     "@socket.io/redis-adapter": "^8.2.1",
     "@socket.io/redis-emitter": "^5.1.0",
     "@types/lodash": "^4.14.202",
@@ -83,12 +83,12 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.9.1",
     "nanoid": "^3.3.7",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.14",
+    "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.4",
@@ -101,21 +101,21 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.3",
+    "@antfu/eslint-config": "^2.6.4",
     "@compodoc/compodoc": "^1.1.23",
-    "@nestjs/cli": "^10.3.0",
-    "@nestjs/schematics": "^10.1.0",
-    "@nestjs/testing": "^10.3.1",
+    "@nestjs/cli": "^10.3.2",
+    "@nestjs/schematics": "^10.1.1",
+    "@nestjs/testing": "^10.3.2",
     "@types/cache-manager": "^4.0.6",
-    "@types/jest": "29.5.11",
+    "@types/jest": "29.5.12",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.11.10",
+    "@types/node": "^20.11.16",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.1",
+    "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.9.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
@@ -125,10 +125,14 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3"
   },
-  "overrides": {
-    "@liaoliaots/nestjs-redis": {
-      "@nestjs/common": "10.3.0",
-      "@nestjs/core": "10.3.0"
+  "pnpm": {
+    "overrides": {
+      "@liaoliaots/nestjs-redis": "npm:@songkeys/nestjs-redis"
+    },
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "reflect-metadata": "^0.2.1"
+      }
     }
   },
   "jest": {
