feat(modules): add netdisk module

--- a/.env
+++ b/.env
@@ -9,3 +9,11 @@ LOGGER_LEVEL = verbose
 LOGGER_MAX_FILES = 31
 
 TZ = Asia/Shanghai
+
+# OSS(qiniu)
+OSS_ACCESSKEY=xxx
+OSS_SECRETKEY=xxx
+OSS_DOMAIN=https://cdn.buqiyuan.site
+OSS_BUCKET=nest-admin
+OSS_ZONE=Zone_z2 # Zone_as0 | Zone_na0 | Zone_z0 | Zone_z1 | Zone_z2
+OSS_ACCESS_TYPE=public # or private
