--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "pnpm": ">=8.1.0"
   },
   "scripts": {
+    "postinstall": "npm run gen-env-types",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "dev": "npm run start",
@@ -26,6 +27,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "doc": "compodoc -p tsconfig.json -s",
+    "gen-env-types": "npx tsx scripts/genEnvTypes.ts",
     "typeorm": "NODE_ENV=development typeorm -d ./dist/config/database.config.js",
     "migration:create": "typeorm migration:create",
     "migration:generate": "typeorm -- migration:generate",
@@ -42,7 +44,7 @@
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
     "@fastify/multipart": "^8.1.0",
-    "@fastify/static": "^7.0.0",
+    "@fastify/static": "^7.0.1",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/axios": "^3.0.2",
@@ -58,8 +60,8 @@
     "@nestjs/platform-socket.io": "^10.3.2",
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.3.0",
-    "@nestjs/terminus": "^10.2.1",
-    "@nestjs/throttler": "^5.1.1",
+    "@nestjs/terminus": "^10.2.2",
+    "@nestjs/throttler": "^5.1.2",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.3.2",
     "@socket.io/redis-adapter": "^8.2.1",
@@ -88,6 +90,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "qiniu": "^7.11.0",
     "reflect-metadata": "^0.2.1",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
@@ -128,11 +131,6 @@
   "pnpm": {
     "overrides": {
       "@liaoliaots/nestjs-redis": "npm:@songkeys/nestjs-redis"
-    },
-    "peerDependencyRules": {
-      "allowedVersions": {
-        "reflect-metadata": "^0.2.1"
-      }
     }
   },
   "jest": {
