--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "forceConsistentCasingInFileNames": false,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "scripts", "dist"]
 }
