perf(modules): [netdisk/overview] simplify code

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # app
 APP_NAME = Nest Admin
 APP_PORT = 7001
-APP_BASE_URL = http://localhost:7001
+APP_BASE_URL = http://localhost:${APP_PORT}
 APP_LOCALE = zh-CN
 
 # logger
