fix(build): should copy assets
close #27

--- a/.env.production
+++ b/.env.production
@@ -18,7 +18,7 @@ DB_PORT = 13307
 DB_DATABASE = nest_admin
 DB_USERNAME = root
 DB_PASSWORD = root
-DB_SYNCHRONIZE = true
+DB_SYNCHRONIZE = false
 DB_LOGGING = ["error"]
 
 # redis
