refactor(modules): [online]
close #34

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ APP_PORT = 7001
 APP_BASE_URL = http://localhost:${APP_PORT}
 APP_LOCALE = zh-CN
 
+# 是否允许多端登录
+MULTI_DEVICE_LOGIN = true
+
 # logger
 LOGGER_LEVEL = verbose
 LOGGER_MAX_FILES = 31
