--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "socket.io": "^4.7.4",
     "stacktrace-js": "^2.0.2",
     "svg-captcha": "^1.4.0",
-    "systeminformation": "^5.22.0",
+    "systeminformation": "^5.22.1",
     "typeorm": "0.3.17",
     "ua-parser-js": "^1.0.37",
     "winston": "^3.12.0",
@@ -113,6 +113,7 @@
     "@types/jest": "29.5.12",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.25",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
     "cross-env": "^7.0.3",
