--- a/.github/workflows/build-stable.yml
+++ b/.github/workflows/build-stable.yml
@@ -24,5 +24,25 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/nest-admin-server:stable
+          platforms: linux/amd64,linux/arm64
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - name: Deploy to remote server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USERNAME }}
+          password: ${{ secrets.REMOTE_PASSWORD }}
+          port: ${{ secrets.REMOTE_PORT }} 
+          script: |
+            cd ${{ secrets.REMOTE_WORKDIR }}
+            pnpm docker:prod:up
+            docker cp ./public/ nest-admin-server:/nest-admin/public
+            docker image prune -f
+            docker container prune -f
