--- a/.github/workflows/sync-to-gitee.yml
+++ b/.github/workflows/sync-to-gitee.yml
@@ -1,4 +1,5 @@
-name: syncToGitee
+name: Sync To Gitee
+
 env:
   # 7 GiB by default on GitHub, setting to 6 GiB
   # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners#supported-runners-and-hardware-resources
@@ -12,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Mirror the Github organization repos to Gitee.
         uses: Yikun/hub-mirror-action@master
@@ -24,3 +25,4 @@ jobs:
           static_list: 'nest-admin'
           force_update: true
           debug: true
+
