--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "doc": "compodoc -p tsconfig.json -s",
-    "gen-env-types": "npx tsx scripts/genEnvTypes.ts",
+    "gen-env-types": "npx ts-node scripts/genEnvTypes.ts",
     "typeorm": "NODE_ENV=development typeorm-ts-node-esm -d ./dist/config/database.config.js",
     "migration:create": "npm run typeorm migration:create ./src/migrations/initData",
     "migration:generate": "npm run typeorm migration:generate ./src/migrations/update-table_$(echo $npm_package_version | sed 's/\\./_/g')",
@@ -44,27 +44,27 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
-    "@fastify/multipart": "^8.1.0",
+    "@fastify/multipart": "^8.2.0",
     "@fastify/static": "^7.0.1",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/bull": "^10.1.0",
     "@nestjs/cache-manager": "^2.2.1",
-    "@nestjs/common": "^10.3.3",
+    "@nestjs/common": "^10.3.4",
     "@nestjs/config": "^3.2.0",
-    "@nestjs/core": "^10.3.3",
+    "@nestjs/core": "^10.3.4",
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-fastify": "^10.3.3",
-    "@nestjs/platform-socket.io": "^10.3.3",
+    "@nestjs/platform-fastify": "^10.3.4",
+    "@nestjs/platform-socket.io": "^10.3.4",
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/throttler": "^5.1.2",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.3.3",
+    "@nestjs/websockets": "^10.3.4",
     "@socket.io/redis-adapter": "^8.3.0",
     "@socket.io/redis-emitter": "^5.1.0",
     "@types/lodash": "^4.17.0",
@@ -86,7 +86,7 @@
     "lodash": "^4.17.21",
     "mysql2": "^3.9.2",
     "nanoid": "^3.3.7",
-    "nodemailer": "^6.9.12",
+    "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -98,22 +98,22 @@
     "socket.io": "^4.7.5",
     "stacktrace-js": "^2.0.2",
     "svg-captcha": "^1.4.0",
-    "systeminformation": "^5.22.3",
+    "systeminformation": "^5.22.6",
     "typeorm": "0.3.17",
     "ua-parser-js": "^1.0.37",
     "winston": "^3.12.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.8.3",
+    "@antfu/eslint-config": "^2.9.0",
     "@compodoc/compodoc": "^1.1.23",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.2",
+    "@nestjs/testing": "^10.3.4",
     "@types/cache-manager": "^4.0.6",
     "@types/jest": "29.5.12",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.11.30",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
@@ -128,7 +128,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.3"
   },
   "pnpm": {
     "overrides": {
