--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "doc": "compodoc -p tsconfig.json -s",
-    "gen-env-types": "npx ts-node scripts/genEnvTypes.ts",
+    "gen-env-types": "npx tsx scripts/genEnvTypes.ts || true",
     "typeorm": "NODE_ENV=development typeorm-ts-node-esm -d ./dist/config/database.config.js",
     "migration:create": "npm run typeorm migration:create ./src/migrations/initData",
     "migration:generate": "npm run typeorm migration:generate ./src/migrations/update-table_$(echo $npm_package_version | sed 's/\\./_/g')",
