--- a/.env.development
+++ b/.env.development
@@ -13,18 +13,18 @@ SWAGGER_PATH = api-docs
 SWAGGER_VERSION = 1.0
 
 # db
-DB_HOST = 127.0.0.1
-DB_PORT = 13307
-DB_DATABASE = nest_admin
-DB_USERNAME = root
-DB_PASSWORD = root
-DB_SYNCHRONIZE = true
+DB_HOST = 8.134.130.83
+DB_PORT = 3306
+DB_DATABASE = mysql
+DB_USERNAME = lantron
+DB_PASSWORD = Lantron888***
+DB_SYNCHRONIZE = false
 DB_LOGGING = ["error"]
 
 # redis
 REDIS_PORT = 6379
-REDIS_HOST = 127.0.0.1
-REDIS_PASSWORD = 123456
+REDIS_HOST = 8.134.130.83
+REDIS_PASSWORD = lantronredis888
 REDIS_DB = 0
 
 # smtp
