--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
+    "langchain": "^0.1.33",
     "lodash": "^4.17.21",
     "mysql2": "^3.9.2",
     "nanoid": "^3.3.7",
