新增talk测试接口

--- a/.env.development
+++ b/.env.development
@@ -32,4 +32,9 @@ SMTP_HOST = smtp.163.com
 SMTP_PORT = 465
 SMTP_USER = nest_admin@163.com
 SMTP_PASS = VIPLLOIPMETTROYU
- 
+
+# OpenAI
+OPENAI_API_KEY="abc"
+
+# QIANWEN
+QIANWEN_API_KEY="sk-d989a53295734f24a474db9303e88310"
