--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nest-admin",
+  "name": "kc-cloud-mes",
   "version": "1.0.0",
   "private": true,
   "packageManager": "pnpm@8.10.2",
