--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,17 @@
   "compilerOptions": {
     "incremental": true,
     "target": "ES2022",
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext"
+    ],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "baseUrl": "./",
-    "module": "nodenext",
+    "module": "commonjs",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": [
+        "src/*"
+      ]
     },
     "strictBindCallApply": false,
     "strictNullChecks": false,
@@ -23,5 +27,9 @@
     "forceConsistentCasingInFileNames": false,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "scripts", "dist"]
+  "exclude": [
+    "node_modules",
+    "scripts",
+    "dist"
+  ]
 }
