--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "langchain": "^0.1.33",
+    "lint-staged": "^15.2.2",
     "lodash": "^4.17.21",
     "mysql2": "^3.9.2",
     "nanoid": "^3.3.7",
@@ -122,7 +123,6 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.11.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
@@ -159,7 +159,7 @@
     "testEnvironment": "node"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
+//    "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
     "*": "eslint --fix"
