--- a/.env.development
+++ b/.env.development
@@ -18,7 +18,7 @@ DB_PORT = 3306
 DB_DATABASE = mysql
 DB_USERNAME = lantron
 DB_PASSWORD = Lantron888***
-DB_SYNCHRONIZE = false
+DB_SYNCHRONIZE = true
 DB_LOGGING = ["error"]
 
 # redis
