--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "nest-admin",
   "version": "2.0.0",
   "private": true,
-  "packageManager": "pnpm@8.10.2",
+  "packageManager": "pnpm@9.1.0",
   "license": "MIT",
   "engines": {
-    "node": ">=16.20.2",
-    "pnpm": ">=8.1.0"
+    "node": ">=16.20.2"
   },
   "scripts": {
     "postinstall": "npm run gen-env-types",
@@ -45,79 +44,80 @@
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
     "@fastify/multipart": "^8.2.0",
-    "@fastify/static": "^7.0.3",
+    "@fastify/static": "^7.0.4",
     "@liaoliaots/nestjs-redis": "^9.0.5",
-    "@nestjs-modules/mailer": "^1.10.3",
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/bull": "^10.1.1",
     "@nestjs/cache-manager": "^2.2.2",
-    "@nestjs/common": "^10.3.7",
-    "@nestjs/config": "^3.2.1",
-    "@nestjs/core": "^10.3.7",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-fastify": "^10.3.7",
-    "@nestjs/platform-socket.io": "^10.3.7",
-    "@nestjs/schedule": "^4.0.1",
+    "@nestjs/platform-fastify": "^10.3.8",
+    "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/throttler": "^5.1.2",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.3.7",
+    "@nestjs/websockets": "^10.3.8",
     "@socket.io/redis-adapter": "^8.3.0",
     "@socket.io/redis-emitter": "^5.1.0",
     "axios": "^1.6.8",
-    "bull": "^4.12.2",
-    "cache-manager": "^5.4.0",
-    "cache-manager-ioredis-yet": "^2.0.2",
+    "bull": "^4.12.3",
+    "cache-manager": "^5.5.2",
+    "cache-manager-ioredis-yet": "^2.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "cron": "^3.1.6",
+    "cron": "^3.1.7",
     "cron-parser": "^4.9.0",
     "crypto-js": "^4.2.0",
-    "dayjs": "^1.11.10",
+    "dayjs": "^1.11.11",
     "dotenv": "16.4.5",
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
-    "mysql2": "^3.9.3",
+    "mysql2": "^3.9.7",
     "nanoid": "^3.3.7",
     "nodemailer": "^6.9.13",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "qiniu": "^7.11.1",
+    "qiniu": "^7.12.0",
     "reflect-metadata": "^0.2.2",
-    "rimraf": "^5.0.5",
+    "rimraf": "^5.0.6",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
     "stacktrace-js": "^2.0.2",
     "svg-captcha": "^1.4.0",
-    "systeminformation": "^5.22.7",
+    "systeminformation": "^5.22.8",
+    "ts-node": "^10.9.2",
     "typeorm": "0.3.17",
     "ua-parser-js": "^1.0.37",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.12.1",
-    "@compodoc/compodoc": "^1.1.23",
+    "@antfu/eslint-config": "^2.17.0",
+    "@compodoc/compodoc": "^1.1.24",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.5",
+    "@nestjs/testing": "^10.3.8",
     "@types/cache-manager": "^4.0.6",
     "@types/jest": "29.5.12",
-    "@types/lodash": "^4.17.0",
+    "@types/lodash": "^4.17.1",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.12.8",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "^9.2.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "simple-git-hooks": "^2.11.1",
@@ -125,9 +125,8 @@
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   },
   "pnpm": {
     "overrides": {
