--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "packageManager": "pnpm@9.1.0",
   "license": "MIT",
   "engines": {
-    "node": ">=16.20.2"
+    "node": ">=16.20.2",
+    "pnpm": ">=9"
   },
   "scripts": {
     "postinstall": "npm run gen-env-types",
@@ -90,7 +91,7 @@
     "passport-local": "^1.0.0",
     "qiniu": "^7.12.0",
     "reflect-metadata": "^0.2.2",
-    "rimraf": "^5.0.6",
+    "rimraf": "^5.0.7",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
     "stacktrace-js": "^2.0.2",
@@ -112,7 +113,7 @@
     "@types/jest": "29.5.12",
     "@types/lodash": "^4.17.1",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.12.8",
+    "@types/node": "^20.12.11",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.2",
     "@types/ua-parser-js": "^0.7.39",
@@ -129,8 +130,12 @@
     "typescript": "^5.4.5"
   },
   "pnpm": {
-    "overrides": {
-      "@liaoliaots/nestjs-redis": "npm:@songkeys/nestjs-redis"
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "@liaoliaots/nestjs-redis>@nestjs/common": "^10.0.0",
+        "@liaoliaots/nestjs-redis>@nestjs/core": "^10.0.0",
+        "eslint": "^9.2.0"
+      }
     }
   },
   "jest": {
