--- a/.env.production
+++ b/.env.production
@@ -13,18 +13,18 @@ SWAGGER_PATH = api-docs
 SWAGGER_VERSION = 1.0
 
 # db
-DB_HOST = host.docker.internal
-DB_PORT = 13307
-DB_DATABASE = nest_admin
-DB_USERNAME = root
-DB_PASSWORD = root
-DB_SYNCHRONIZE = false
+DB_HOST = 8.134.130.83
+DB_PORT = 3306
+DB_DATABASE = mysql
+DB_USERNAME = lantron
+DB_PASSWORD = Lantron888***
+DB_SYNCHRONIZE = true
 DB_LOGGING = ["error"]
 
 # redis
 REDIS_PORT = 6379
-REDIS_HOST = host.docker.internal
-REDIS_PASSWORD = 123456
+REDIS_HOST = 8.134.130.83
+REDIS_PASSWORD = lantronredis888
 REDIS_DB = 0
 
 # smtp
@@ -34,4 +34,4 @@ SMTP_USER = nest_admin@163.com
 SMTP_PASS = VIPLLOIPMETTROYU
 
 # 是否为演示模式(在演示模式下，会拦截除 GET 方法以外的所有请求)
-IS_DEMO = true
+IS_DEMO = false
