--- a/.env.development
+++ b/.env.development
@@ -14,7 +14,7 @@ SWAGGER_VERSION = 1.0
 
 # db
 DB_HOST = 127.0.0.1
-DB_PORT = 13307
+DB_PORT = 3306
 DB_DATABASE = nest_admin
 DB_USERNAME = root
 DB_PASSWORD = root
@@ -24,7 +24,7 @@ DB_LOGGING = ["error"]
 # redis
 REDIS_PORT = 6379
 REDIS_HOST = 127.0.0.1
-REDIS_PASSWORD = 123456
+REDIS_PASSWORD =
 REDIS_DB = 0
 
 # smtp
@@ -32,4 +32,3 @@ SMTP_HOST = smtp.163.com
 SMTP_PORT = 465
 SMTP_USER = nest_admin@163.com
 SMTP_PASS = VIPLLOIPMETTROYU
- 
